refactor: remove old OurServices component and styles; update tailwind config for dark mode and new color palette

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="theme-color" content="#0ea5e9">
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <!-- Fonts: Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Icons: Font Awesome 6 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-Sl2wqg1qH9rQv0Xn3q7VQv8s+1w7WzYq3WkQy2Hc0m0Tq3FQfM3Yb2qfUoTq1m1mC8Cz5r2mQJm8bq9g7y8c7A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <noscript>
